# multi-agent-orchestration

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  mao.spec  mao_cli.py  pyproject.toml  test_run.py
agents/: AGENTS.md  architect.md  data.md  designer.md  developer.md  devops.md  documentation.md  fixer.md  planner.md  product-manager.md  requirements-analyst.md  reviewer.md  security.md  tester.md
config/: AGENTS.md
docs/: production-roadmap.md
examples/: bootstrap_phase8_integrations.py  bootstrap_phase8_knowledge.py  bootstrap_phase8_langgraph.py  bootstrap_phase8_webui.py  bootstrap_phase8_workspace.py  demo_e2e.py  demo_full.py  dev_pipeline.py
notes/: TODO.md  ideas.md
scripts/: dashboard.py  install.sh  package.sh
src/: AGENTS.md  __init__.py  logging_config.py
test-fix-cycle/: calculator.py  test_calculator.py
tests/: __init__.py  conftest.py  test_agent_memory.py  test_builder.py  test_e2e_real_execution.py  test_fix_cycle.py  test_memory.py  test_phase4_adapter_state_verifier.py  test_phase4_builder_planner.py  test_phase4_executor.py  test_phase4_plangraph.py  test_phase4_registry.py  test_phase5_config_builder.py  test_phase5_loader.py  test_phase5_schema.py  test_phase6_bug_fix_workflow.py  test_phase6_domain_agents.py  test_phase6_integration.py  test_phase7_production.py  test_phase8_integrations.py  test_phase8_knowledge.py  test_phase8_websocket.py  test_phase8_workspace.py  test_phase9_clarification_routes.py  test_phase9_clarifier.py  test_phase9_runner_clarifier.py  test_pipeline.py  (+3 more)
(+215 files in other folders)
